docs/kaniop/v0.8/index.md
---
title: Introduction
weight: 00
---

# Introduction

Kaniop is a Kubernetes operator for managing [Kanidm](https://kanidm.com) clusters. By leveraging GitOps, it delivers a declarative way to handle identity management resources—such as persons, groups, OAuth2 integrations and more—through familiar Kubernetes manifests.

This approach empowers teams to manage identity infrastructure with the same tools and workflows they already use for application deployments, ensuring consistency, scalability, and ease of use.

## What is Kanidm?

Kanidm is a simple yet secure identity management platform, designed to act as a complete identity provider. It covers a broad spectrum of authentication and directory requirements, so you can offload user and resource management to Kanidm without needing extra components.

By relying on strict defaults, self-healing mechanisms, and straightforward configuration, Kanidm can comfortably run anywhere—from small home labs to large enterprises.

## Why Choose Kaniop?

Kaniop takes the complexity out of managing identity infrastructure by combining the power of Kanidm with Kubernetes' declarative and scalable nature.

Whether you're deploying a single Kanidm cluster or managing multiple environments, Kaniop ensures a seamless experience with features like GitOps integration, multi-cluster support, and automated resource reconciliation.

It's the perfect solution for teams looking to modernize their identity management workflows while maintaining security and reliability.

## LLM and Automation Entry Point

For LLM agents and automation that need a source-oriented operations map, use the published [`llm.txt`](https://pando85.github.io/llm.txt). It points to generated CRD schemas, generated examples, Helm values, and troubleshooting workflows so agents can prefer current authoritative sources over stale copied snippets.
